--- a/stories/css/story.css
+++ b/stories/css/story.css
@@ -3,11 +3,6 @@
   float: left;
 }
 
-#instructions-alert {
-  width: 80%;
-  margin: 0 10%;
-  position: absolute;
-  top: 10%;
-  z-index: 9999;
+#btn-launch-survey {
+  margin-left: 1em;
 }
-
